Update dockerfile
1) Install hive from stable release rather than source
2) Add sleep for postgres to start up